Fix sendMessage() DCOP call failing to wait for attachments to be downloaded and included in the message, before sending it.

This fixes KAlarm failing to send attachments when KMail is used as the email
client. The fix will be included in KDE 3.5.7.

BUG: 144958

svn path=/branches/KDE/3.5/kdepim/; revision=663344