composer.h
@@ -42,6 +42,7 @@ namespace KMail {
      * From MailComposerIface
      */
     virtual void send( int how ) = 0;
+    virtual void addAttachmentsAndSend(const KURL::List &urls, const QString &comment, int how) = 0;
     virtual void addAttachment( KURL url, QString comment ) = 0;
     virtual void addAttachment( const QString & name,
                                 const QCString & cte,
@@ -136,7 +137,7 @@ namespace KMail {
     virtual void autoSaveMessage() = 0;
 
   public: // kmkernel, attachmentlistview
-    virtual void addAttach( const KURL url ) = 0;
+    virtual bool addAttach( const KURL url ) = 0;
 
   public: // kmcommand
     /**
